// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error type renders correctly 1`] = `
<div
  className="css-28b26n"
>
  Error alert
</div>
`;

exports[`success type renders correctly 1`] = `
<div
  className="css-8xgv3x"
>
  Success alert
</div>
`;
